# CG-Project5

./: CMakeLists.txt  README.md
TrackFiles/: 12points.txt  map.txt  tree_pos.txt
configuration/: root_directory.h.in
include/learnopengl/: camera.h  model.h
lib/: GLEW_1130.lib  STB_IMAGE.lib
lib/Debug/: freeglut_staticd.lib  freeglutd.exp  freeglutd.lib
lib/Release/: freeglut.exp  freeglut.lib  freeglut_static.lib
resources/objects/Sci_fi_Train/: Sci_fi_Train.mtl
resources/objects/brick_wall/: brick_wall.mtl
resources/objects/cannon/: cannon.mtl
resources/objects/headPhone/: ATH-ANC700BT_Final.fbx  ATH-ANC700BT_Final.mtl
resources/objects/sleeper/: sleeper.mtl
resources/objects/sun/: sun.mtl
resources/objects/terrain/: terrain.mtl
resources/objects/titan/chou/: chou.mtl
resources/objects/titan/fake/: fake.mtl
resources/objects/titan/tsai/: tsai.mtl
resources/objects/track/: track.mtl
resources/objects/train_car/: train_car.mtl
resources/objects/tree2/: tree2.mtl
resources/objects/wings/: rightWing.mtl
src/: CallBacks.H  CallBacks.cpp  FrameBuffer.cpp  FrameBuffer.h  My_functions.H  Object.H  Particle_system.H  Particle_system.cpp  SkyBox.cpp  SkyBox.h  TextRendering.cpp  TextRendering.h  Track.H  Track.cpp  TrainView.H  TrainView.cpp  TrainWindow.H  TrainWindow.cpp  WaterMesh.cpp  WaterMesh.h  main.cpp  tree_pos.txt
src/RenderUtilities/: Texture.h
src/Utilities/: ArcBallCam.H  ArcBallCam.cpp
src/shaders/: basic_lighting.frag  basic_lighting.vert  color_uv.frag  color_uv.vert  interactive_heightmap.frag  light_cube.frag  light_cube.vert  main_screen.frag  main_screen.vert  normal_mapping.vert  point_light.vert  simple.vert  standard_shader.frag  standard_shader.vert  sub_screen.frag  water_heightMap.frag  water_heightMap.vert  water_surface.frag  water_surface.vert
